  from other users originating from Special:EmailUser.

=== New developer features in 1.34 ===
* The ImgAuthModifyHeaders hook was added to img_auth.php to allow modification
  of headers in private wikis.
* Language::formatTimePeriod now supports the new 'avoidhours' option to output
  strings like "5 days ago" instead of "5 days 13 hours ago".

=== External library changes in 1.34 ===

==== New external libraries ====
* …

==== Changed external libraries ====
* Updated Mustache from 1.0.0 to v3.0.1.
* Updated OOUI from v0.31.3 to v0.33.2.
* Updated composer/semver from 1.4.2 to 1.5.0.
* Updated composer/spdx-licenses from 1.4.0 to 1.5.1 (dev-only).
* Updated mediawiki/codesniffer from 25.0.0 to 26.0.0 (dev-only).
* Updated cssjanus/cssjanus from 1.2.1 to 1.3.0.
* Updated wikimedia/at-ease from 1.2.0 to 2.0.0.
* Updated wikimedia/remex-html from 2.0.1 to 2.0.3.
* Updated monolog/monolog from 1.22.1 to 1.24.0 (dev-only).
* Updated wikimedia/object-factory from 1.0.0 to 2.1.0.
* Updated wikimedia/timestamp from 2.2.0 to 3.0.0.
* Updated wikimedia/xmp-reader from 0.6.2 to 0.6.3.
* Updated mediawiki/mediawiki-phan-config from 0.6.0 to 0.6.1 (dev-only).
* …

==== Removed external libraries ====
* The jquery.async module, deprecated in 1.33, was removed.
* …

=== Bug fixes in 1.34 ===
* (T222529) If a log entry or page revision is recorded in the database with an
  empty username, attempting to display it will log an error and return a "no
  username available" to the user instead of silently displaying nothing or
  invalid links.

=== Action API changes in 1.34 ===
* The 'recenteditcount' response property from action=query list=allusers,
  deprecated in 1.25, has been removed.

=== Action API internal changes in 1.34 ===
* …

=== Languages updated in 1.34 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.
