@@ -4202,10 +4202,9 @@
 	"specialmute-success": "Your mute preferences have been updated. See all muted users in [[Special:Preferences|your preferences]].",
 	"specialmute-submit": "Confirm",
 	"specialmute-label-mute-email": "Mute emails from this user",
-	"specialmute-header": "Please select your mute preferences for {{BIDI:[[User:$1]]}}.",
+	"specialmute-header": "Please select your mute preferences for <b>{{BIDI:[[User:$1]]}}</b>.",
 	"specialmute-error-invalid-user": "The username requested could not be found.",
-	"specialmute-error-email-blacklist-disabled": "Muting users from sending you emails is not enabled.",
-	"specialmute-error-email-preferences": "You must confirm your email address before you can mute a user. You may do so from [[Special:Preferences]].",
+	"specialmute-error-no-options": "Mute features are unavailable. This might be because: you haven't confirmed your email address or the wiki administrator has disabled email features and/or email blacklist for this wiki.",
 	"specialmute-email-footer": "To manage email preferences for {{BIDI:$2}} please visit <$1>.",
 	"specialmute-login-required": "Please log in to change your mute preferences.",
 	"mute-preferences": "Mute preferences",
