@@ -4413,8 +4413,7 @@
 	"specialmute-label-mute-email": "Label for the checkbox that mutes/unmutes emails from the specified user.",
 	"specialmute-header": "Used as header text on [[Special:Mute]]. Shown before the form with the muting options.\n* $1 - User selected for muting",
 	"specialmute-error-invalid-user": "Error displayed when the username cannot be found.",
-	"specialmute-error-email-blacklist-disabled": "Error displayed when email blacklist is not enabled.",
-	"specialmute-error-email-preferences": "Error displayed when the user has not confirmed their email address.",
+	"specialmute-error-no-options": "Error displayed when there are no options available to mute on [[Special:Mute]].",
 	"specialmute-email-footer": "Email footer in plain text linking to [[Special:Mute]] preselecting the sender to manage muting options.\n* $1 - Url linking to [[Special:Mute]].\n* $2 - The user sending the email.",
 	"specialmute-login-required": "Error displayed when a user tries to access [[Special:Mute]] before logging in.",
 	"mute-preferences": "Link in the sidebar to manage muting preferences for a user. It links to [[Special:Mute]] with the user in context as the subpage.",
